--- a/LSTM_Regression_Assignment_Maria_Carolina_Leal_Cardenas_02042024.ipynb
+++ b/LSTM_Regression_Assignment_Maria_Carolina_Leal_Cardenas_02042024.ipynb
@@ -734,7 +734,7 @@
         "\n",
         "A:\n",
         "\n",
-        "- From the previous assignment, the linear regression model used to predict 'Global Active Power' with time as the dependent variable did  yield satisfactory results. In this iteration using LSTM, I incorporated the 'unix' time from the previous dataset and included all other variables as predictors. I plotted correlation matrices to determine the optimal timeset for predictions. I conducted the experiment both with all variables included and without 'voltage.'\n",
+        "- From the previous assignment, the linear regression model used to predict 'Global Active Power' with time as the dependent variable did  yield satisfactory results. In this iteration using LSTM, I incorporated the 'unix' time from the previous dataset and included all other variables as predictors. I plotted correlation heatmaps to determine the optimal timeset for predictions. I conducted the experiment both with all variables included and without 'voltage.'\n",
         "\n",
         "- In the sequential layer, I used 100 units for the first layer, followed by a dropout layer with a rate of 0.1, and concluded with a connected 'dense' layer without an activation function. I retained the 'Adam' optimizer and used the same loss function, 'mean squared error"
       ]
@@ -1740,6 +1740,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -1756,9 +1759,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.4"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
